<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application Momo</string>
    <string name="textview">TextView</string>
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_to_mt_8848_mo_mo_s_hut">Welcome to Mt.8848 Mo:Mo\'s Hut</string>
    <string name="types_of_momo">Types of Momo</string>
    <string name="list">List</string>
    <string name="in_cart">In cart</string>
    <string name="steam_mo_mo">Steam Mo:Mo</string>
    <string name="fried_mo_mo">Fried Mo:Mo</string>
    <string name="my_favourite">My Favourite</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="name_of_momo">Name of momo</string>
    <string name="price_10_per_plate">Price:10€ per Plate</string>
    <string name="_10_piezas">10 piezas</string>
    <string name="_10_piece">10 piece</string>
    <string name="descripcion_de_momo">Descripcion de MOMO</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_favourite_list">Add to favourite LIst</string>
    <string name="clear_all">Clear All</string>
    <string name="buy">Buy</string>
    <string name="telefono">Telefono*</string>
    <string name="tipo_de_via">Tipo de Via*</string>
    <string name="nombre">Nombre*</string>
    <string name="telephone">Telephone*</string>
    <string name="type_of_road">Type of road*</string>
    <string name="name">Name*</string>
    <string name="number">Number*</string>
    <string name="door">Door*</string>
    <string name="flat">Flat*</string>
    <string name="name_of_road">Name of road*</string>
    <string name="first_surname">First Surname*</string>
    <string name="second_surname">Second Surname</string>
    <string name="direction">Direction</string>
    <string name="done">Done</string>
    <string name="num">Num*</string>
    <string name="note_signifies_fields_obilgatory">Note : \'*\' signifies fields obilgatory</string>
</resources>
